--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-draggable-next": "^2.2.0",
     "vue-easytable": "^2.27.0",
     "vue-good-table-next": "^0.2.1",
+    "vue-json-excel3": "^0.0.9",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-router": "^4.1.6",
     "vue-select": "^4.0.0-beta.6",
