--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue-router": "^4.1.6",
     "vue-select": "^4.0.0-beta.6",
     "vue3-html2pdf": "^1.1.2",
+    "vue3-xlsx": "^1.1.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
